prevent zoom on ios test

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -15,6 +15,9 @@ form {
             color: #fff;
             opacity: .5;
         }
+        &:focus {
+            font-size: 16px;
+        }
     }
 }
 
